<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="ClickHandler"
      type="com.sotti.okhttpvolleygson.ui.MainActivity.MainActivityClickHandler"/>
  </data>

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <include
      android:id="@+id/include_toolbar"
      layout="@layout/toolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/activity_horizontal_margin"
      android:src="@drawable/yoda"
      app:layout_constraintBottom_toTopOf="@id/button_json_object"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
      tools:ignore="ContentDescription"/>

    <Button
      android:id="@+id/button_json_object"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:onClick="@{ClickHandler::onJsonObjectButtonClick}"
      android:text="@string/json_object"
      app:layout_constraintBottom_toTopOf="@id/button_json_array"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

    <Button
      android:id="@+id/button_json_array"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:onClick="@{ClickHandler::onJsonArrayButtonClick}"
      android:text="@string/json_array"
      app:layout_constraintBottom_toTopOf="@id/button_network_image_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

    <Button
      android:id="@+id/button_network_image_view"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:onClick="@{ClickHandler::onNetworkImageViewButtonClick}"
      android:text="@string/network_image_view"
      app:layout_constraintBottom_toTopOf="@id/button_image_request"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

    <Button
      android:id="@+id/button_image_request"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:onClick="@{ClickHandler::onImageRequestButtonClick}"
      android:text="@string/image_request"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  </android.support.constraint.ConstraintLayout>

</layout>